[tool.poetry]
name = "lample"
version = "0.1.0"
description = ""
authors = ["himkt <himkt@cookpad.com>"]

[tool.poetry.dependencies]
python = "^3.8"
seqeval = "^1.2.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
